# financial-calculator

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  cache.py  config.py  database.py  dependencies.py  exceptions.py  health.py  main.py  routers.py
backend/app/analytics/: router.py  service.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/calculator/: router.py  service.py
backend/app/core/: base_model.py  logging.py  middleware.py  pagination.py  security.py
backend/app/expenses/: ai_categorizer.py  import_service.py  models.py  router.py  schemas.py  service.py
backend/app/pages/: router.py
backend/app/users/: models.py
backend/migrations/: env.py
backend/migrations/versions/: 20260527_0944_d0624dedae75_initial_schema_users_categories_.py
backend/templates/: base.html
backend/templates/auth/: login.html  register.html
backend/templates/calculator/: index.html
backend/templates/dashboard/: index.html
backend/templates/expenses/: import.html  import_preview.html  list.html  table_fragment.html
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_auth_extended.py  test_calculator.py  test_expenses.py
backend/tests/unit/: test_calculator.py  test_pagination.py  test_security.py
infra/: docker-compose.prod.yml  docker-compose.yml
infra/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-pvc.yaml  secret.yaml  service.yaml
infra/nginx/: nginx.conf
infra/nginx/conf.d/: app.conf
infra/terraform/: cloudwatch.tf  ecs.tf  elasticache.tf  outputs.tf  providers.tf  rds.tf  s3.tf  terraform.tfvars.example  variables.tf  vpc.tf
